--- a/RelocalizationLogic/RelocalizationLogic.csproj
+++ b/RelocalizationLogic/RelocalizationLogic.csproj
@@ -74,5 +74,9 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Session1.txt" />
+    <Content Include="Session2.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
